www/iseusa/css/ISEstyle.css
/* ... */
/* end logo box information */


/* tab Bar information */
.tabs1 {
	text-align: right;
	display: block;
	float: left;
	width: 131px;
	text-align: center;
	background-image: url(/images/topTabs/tabs_03.png);
	background-repeat: no-repeat;
	z-index: 2;
	height: 51px;
	margin: 0px;
	padding: 0px;
	background-position: left center;
}
.tabs1:hover {
	text-align: right;
	display: block;
	float: left;
	width: 131px;
	text-align: center;
	background-image: url(/images/topTabs/MOtabs_03.png);
	background-repeat: no-repeat;
	z-index: 2;
	height: 51px;
	margin: 0px;
	padding: 0px;
	background-position: left center;
}
.tabs1:active {
	text-align: right;
	display: block;
	float: left;
	width: 131px;
	text-align: center;
	background-image: url(/images/topTabs/live_03.png);
	background-repeat: no-repeat;
	z-index: 2;
	height: 51px;
	margin: 0px;
	padding: 0px;
	background-position: left center;
}
.tabs2{
	text-align: right;
	display: block;
	float: left;
	width: 115px;
	text-align: center;
	background-image: url(/images/topTabs/tabs_04.png);
	background-repeat: no-repeat;
	z-index: 2;
	height: 51px;
	margin: 0px;
	padding: 0px;
	background-position: left center;
}
.tabs2selected {
	text-align: right;
	display: block;
	float: left;
	width: 115px;
	text-align: center;
	background-image: url(../images/topTabs/MOtabs_04.png);
	background-repeat: no-repeat;
	z-index: 2;
	height: 51px;
	margin: 0px;
	padding: 0px;
	background-position: left center;
}
.tabs2:hover {
	text-align: right;
	display: block;
	float: left;
	width: 115px;
	text-align: center;
	background-image: url(/images/topTabs/MOtabs_04.png);
	background-repeat: no-repeat;
	z-index: 2;
	height: 51px;
	margin: 0px;
	padding: 0px;
	background-position: left center;
}
.tabs2:active {
	text-align: right;
	display: block;
	float: left;
	width: 115px;
	text-align: center;
	background-image: url(/images/images/topTabs/live_04.png);
	background-repeat: no-repeat;
	z-index: 2;
	height: 51px;
	margin: 0px;
	padding: 0px;
	background-position: left center;
}

.tabs3{
	text-align: right;
	display: block;
	float: left;
	width: 100px;
	text-align: center;
	background-image: url(/images/topTabs/tabs_05.png);
	background-repeat: no-repeat;
	z-index: 2;
	height: 51px;
	margin: 0px;
	padding: 0px;
	background-position: left center;
}
.tabs3:hover {
	text-align: right;
	display: block;
	float: left;
	width: 100px;
	text-align: center;
	background-image: url(/images/topTabs/MOtabs_05.png);
	background-repeat: no-repeat;
	z-index: 2;
	height: 51px;
	margin: 0px;
	padding: 0px;
	background-position: left center;
}
.tabs3:active {
	text-align: right;
	display: block;
	float: left;
	width: 100px;
	text-align: center;
	background-image: url(/images/topTabs/live_05.png);
	background-repeat: no-repeat;
	z-index: 2;
	height: 51px;
	margin: 0px;
	padding: 0px;
	background-position: left center;
}
.tabs4{
	text-align: right;
	display: block;
	float: left;
	width: 100px;
	text-align: center;
	background-image: url(/images/topTabs/tabs_06.png);
	background-repeat: no-repeat;
	z-index: 2;
	height: 51px;
	margin: 0px;
	padding: 0px;
	background-position: left center;
}
.tabs4:hover {
	text-align: right;
	display: block;
	float: left;
	width: 100px;
	text-align: center;
	background-image: url(/images/topTabs/MOtabs_06.png);
	background-repeat: no-repeat;
	z-index: 2;
	height: 51px;
	margin: 0px;
	padding: 0px;
	background-position: left center;
}
.tabs4:active {
	text-align: right;
	display: block;
	float: left;
	width: 100px;
	text-align: center;
	background-image: url(/images/images/topTabs/live_06.png);
	background-repeat: no-repeat;
	z-index: 2;
	height: 51px;
	margin: 0px;
	padding: 0px;
	background-position: left center;
}
.tabs5{
	text-align: right;
	display: block;
	float: left;
	width: 85px;
	text-align: center;
	background-image: url(/images/topTabs/tabs_07.png);
	background-repeat: no-repeat;
	z-index: 2;
	height: 51px;
	margin: 0px;
	padding: 0px;
	background-position: left center;
}
.tabs5:hover {
	text-align: right;
	display: block;
	float: left;
	width: 85px;
	text-align: center;
	background-image: url(/images/topTabs/MOtabs_07.png);
	background-repeat: no-repeat;
	z-index: 2;
	height: 51px;
	margin: 0px;
	padding: 0px;
	background-position: left center;
}
.tabs5:active {
	text-align: right;
	display: block;
	float: left;
	width: 85px;
	text-align: center;
	background-image: url(/images/topTabs/live_07.png);
	background-repeat: no-repeat;
	z-index: 2;
	height: 51px;
	margin: 0px;
	padding: 0px;
	background-position: left center;

}
.tabs6{
	text-align: right;
	display: block;
	float: left;
	width: 80px;
	text-align: center;
	background-image: url(/images/topTabs/tabs_08.png);
	background-repeat: no-repeat;
	z-index: 2;
	height: 51px;
	margin: 0px;
	padding: 0px;
	background-position: left center;
}
.tabs6:hover {
	text-align: right;
	display: block;
	float: left;
	width: 80px;
	text-align: center;
	background-image: url(/images/topTabs/MOtabs_08.png);
	background-repeat: no-repeat;
	z-index: 2;
	height: 51px;
	margin: 0px;
	padding: 0px;
	background-position: left center;
}
.tabs6:active {
	text-align: right;
	display: block;
	float: left;
	width: 80px;
	text-align: center;
	background-image: url(/images/topTabs/live_08.png);
	background-repeat: no-repeat;
	z-index: 2;
	height: 51px;
	margin: 0px;
	padding: 0px;
	background-position: left center;
}
.tabsBar {
	height: 51px;
	width: 625px;
	float: right;
}
/* end tab Bar information */


#footer1 {
	clear: both;
	height: 35px;
	margin: 0;
	background-color: #000;
	width: 100%;
	display: block;
	padding-top: 10px;
	padding-right: 10px;
	padding-bottom: 0px;
	padding-left: 10;
	position: fixed;
	bottom: 0px;
}
#footer{
	clear: both;
	height: 45px;
	margin: 0;
	background-color: #000;
	padding-top: 14;
	padding-right: 0;
	padding-bottom: 0;
	padding-left: 0;
} 
.clear {
	height: 15px;
}
#wrap {height:100%;
}
#main {padding-bottom: 30px;
}
/* ... */

